# nextless

./: Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  create_net.sh  run.sh
.devcontainer/jaeger/: run.sh
.devcontainer/otel/: config.yml  run.sh
.devcontainer/prom/: prometheus.yml  run.sh
edgeless_api/: Cargo.toml
edgeless_api/proto/: messages.proto
edgeless_api/src/: invocation.rs  resource_configuration.rs  workflow_instance.rs
edgeless_api/src/coap_impl/: invocation.rs  mod.rs  node_registration.rs  orchestration.rs  resource_configuration.rs
edgeless_api/src/grpc_impl/: common.rs  function_instance.rs  invocation.rs  link.rs  node_registration.rs  proxy_instance.rs  resource_configuration.rs  workflow_instance.rs
edgeless_api_core/src/: coap_mapping.rs  instance_id.rs  invocation.rs  resource_configuration.rs
edgeless_build/src/: lib.rs
edgeless_cli/: Cargo.toml
edgeless_cli/src/: edgeless_cli.rs
edgeless_con/src/: controller.rs  lib.rs  orchestration_logic.rs
edgeless_con/src/controller/: active_workflow.rs  server.rs  test.rs
edgeless_con/src/ir/: actor.rs  link.rs  managed_worflow.rs  mod.rs  proxy.rs  resource.rs  subflow.rs  transformations.rs  workflow.rs
edgeless_config/src/: lib.rs  port.rs  port_class.rs  resource.rs
edgeless_dataplane/: Cargo.toml
edgeless_dataplane/src/: alias_mapping.rs  core.rs  handle.rs  node_local.rs  remote_node.rs
edgeless_embedded/src/: agent.rs  coap.rs  dataplane.rs
edgeless_embedded/src/resource/: mock_display.rs  mock_sensor.rs  scd30_sensor.rs
edgeless_embedded_emu/src/: main.rs
edgeless_function/src/: lib.rs
edgeless_function_core/src/: lib.rs
edgeless_function_macro/src/: lib.rs
edgeless_inabox/: Cargo.toml
edgeless_inabox/src/: lib.rs
edgeless_link_multicast/src/: controller.rs  link.rs
edgeless_node/: Cargo.toml
edgeless_node/src/: lib.rs  proxy.rs
edgeless_node/src/agent/: mod.rs
edgeless_node/src/base_runtime/: alias_mapping.rs  (+3 more)
edgeless_systemtests/: Cargo.toml
edgeless_systemtests/src/: lib.rs
edgeless_telemetry/: Cargo.toml
edgeless_telemetry/src/: lib.rs  prometheus_target.rs  telemetry_events.rs
examples/file_log/: file_log_example.star
examples/http_egress/: http_egress.star
examples/http_ingress/: http_ingress.star
examples/topic_test/: topic_test.star
functions/http_processor/: function.json  http_processor.star
functions/http_requestor/: Cargo.toml  function.json  http_requestor.star
functions/http_requestor/src/: lib.rs
functions/message_generator/: Cargo.toml  function.json  message_generator.star
functions/message_generator/src/: lib.rs
functions/messaging_test/: Cargo.toml  function.json  messaging_test.star
functions/messaging_test/src/: lib.rs
functions/ping_async/: function.json
functions/pong_async/: function.json
resources/: file_log.star  http_egress.star  http_ingress.star  redis.star
(+21 files in other folders)
