# SPDX-FileCopyrightText: © 2023 Technical University of Munich, Chair of Connected Mobility
# SPDX-License-Identifier: MIT
[workspace]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
strip = true

[package]
name = "http_requestor"
version = "0.1.0"
authors = ["Raphael Hetzel <hetzel@in.tum.de>"]
edition = "2021"

[lib]
name = "http_requestor"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
edgeless_function = {git = "https://github.com/edgeless-project/edgeless.git", branch = "serverless_ir", package = "edgeless_function" }
edgeless_http = {git = "https://github.com/edgeless-project/edgeless.git", branch = "serverless_ir", package = "edgeless_http" }
edgeless_function_core = {git = "https://github.com/edgeless-project/edgeless.git", branch = "serverless_ir", package = "edgeless_function_core" }
log = "0.4"

[features]

output_http_out = []