# SPDX-FileCopyrightText: © 2023 Claudio Cicconetti <c.cicconetti@iit.cnr.it>
# SPDX-License-Identifier: MIT
[workspace]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
strip = true

[package]
name = "message_generator"
version = "0.1.0"
authors = ["Claudio Cicconetti <c.cicconetti@iit.cnr.it>"]
edition = "2021"

[lib]
name = "message_generator"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
edgeless_function = {git = "https://github.com/edgeless-project/edgeless.git", branch = "serverless_ir", package = "edgeless_function" }
edgeless_function_core = {git = "https://github.com/edgeless-project/edgeless.git", branch = "serverless_ir", package = "edgeless_function_core" }
serde = {version="1", features=["derive"] }
serde_json = "1"
log = "0.4"
uuid = "1.7.0"

[features]
output_message = []