# SPDX-FileCopyrightText: © 2023 Technical University of Munich, Chair of Connected Mobility
# SPDX-License-Identifier: MIT
[workspace]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
strip = true

[package]
name = "messaging_test"
version = "0.1.0"
authors = ["Raphael Hetzel <hetzel@in.tum.de>"]
edition = "2021"

[lib]
name = "messaging_test"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
edgeless_function = { path = "../../edgeless_function" }
edgeless_function_core ={ path = "../../edgeless_function_core"}
log = "0.4"

[features]
default = [
    "input_test_cast_input",
    "input_test_input_reply",
    "input_test_input_noreply",
    "output_test_cast",
    "output_test_call"
]
input_test_cast_input = []
input_test_input_reply = []
input_test_input_noreply = []
output_test_cast = []
output_test_call = []